--- a/desafio4all/View/Game.storyboard
+++ b/desafio4all/View/Game.storyboard
@@ -1,7 +1,95 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RKt-Ak-Mxf">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Game View Controller-->
+        <scene sceneID="EcV-A7-z2i">
+            <objects>
+                <viewController id="1iL-Ov-ZcF" customClass="GameViewController" customModule="desafio4all" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="l7g-Zw-jHw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iBp-6T-Jgb">
+                                <rect key="frame" x="0.0" y="141" width="414" height="659"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WzU-yf-sVb">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cards" id="Fh6-zR-zDm">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sc7-y8-HmR">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJV-7q-DDZ">
+                                <rect key="frame" x="184" y="820" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Di-B6-N8j">
+                                <rect key="frame" x="20" y="100" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="13z-sq-Cvy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iBp-6T-Jgb" firstAttribute="top" secondItem="7Di-B6-N8j" secondAttribute="bottom" constant="20" id="5tT-f4-uZ9"/>
+                            <constraint firstItem="VJV-7q-DDZ" firstAttribute="centerX" secondItem="13z-sq-Cvy" secondAttribute="centerX" id="7mj-42-EKj"/>
+                            <constraint firstItem="iBp-6T-Jgb" firstAttribute="leading" secondItem="13z-sq-Cvy" secondAttribute="leading" id="E1H-1E-nRl"/>
+                            <constraint firstItem="13z-sq-Cvy" firstAttribute="trailing" secondItem="7Di-B6-N8j" secondAttribute="trailing" constant="20" id="EaA-fK-veP"/>
+                            <constraint firstItem="13z-sq-Cvy" firstAttribute="trailing" secondItem="iBp-6T-Jgb" secondAttribute="trailing" id="RrP-Ja-4p6"/>
+                            <constraint firstItem="7Di-B6-N8j" firstAttribute="top" secondItem="13z-sq-Cvy" secondAttribute="top" constant="12" id="Tsb-rL-4OX"/>
+                            <constraint firstItem="VJV-7q-DDZ" firstAttribute="top" secondItem="iBp-6T-Jgb" secondAttribute="bottom" constant="20" id="auS-zq-0g5"/>
+                            <constraint firstItem="13z-sq-Cvy" firstAttribute="bottom" secondItem="VJV-7q-DDZ" secondAttribute="bottom" constant="12" id="eCb-RI-BD7"/>
+                            <constraint firstItem="7Di-B6-N8j" firstAttribute="leading" secondItem="13z-sq-Cvy" secondAttribute="leading" constant="20" id="k34-Yp-qJv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ple-KV-MeR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TZg-0O-Rkj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="913.04347826086962" y="144.64285714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WtO-sL-0Vs">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RKt-Ak-Mxf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rI4-Fi-Eme">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1iL-Ov-ZcF" kind="relationship" relationship="rootViewController" id="1Bn-QR-Kg4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BoR-66-qNQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2.8985507246376816" y="144.64285714285714"/>
+        </scene>
+    </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
