--- a/desafio4all/Base.lproj/LaunchScreen.storyboard
+++ b/desafio4all/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,22 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="Swy-Ys-3K2">
-                                <rect key="frame" x="20" y="274.5" width="374" height="357"/>
-                                <color key="backgroundColor" red="0.55988401170000002" green="0.1738491952" blue="0.3372667432" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="tintColor" red="0.55988401170000002" green="0.1738491952" blue="0.3372667432" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Swy-Ys-3K2" secondAttribute="height" multiplier="22:21" id="Jb3-so-Hkh"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch-img" translatesAutoresizingMaskIntoConstraints="NO" id="ckZ-kE-snF">
+                                <rect key="frame" x="-26" y="388" width="466" height="120"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.55988401170000002" green="0.1738491952" blue="0.3372667432" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.12941176470588234" green="0.58823529411764708" blue="0.32549019607843138" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="Swy-Ys-3K2" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="1Dm-ah-uPC"/>
-                            <constraint firstItem="Swy-Ys-3K2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="EJC-a5-Pb5"/>
-                            <constraint firstItem="Swy-Ys-3K2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ytp-NH-d9A"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Swy-Ys-3K2" secondAttribute="trailing" constant="20" id="nbT-dK-elS"/>
+                            <constraint firstItem="ckZ-kE-snF" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4eq-ml-pwF"/>
+                            <constraint firstItem="ckZ-kE-snF" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="e0B-0c-J9h"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,6 +34,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="375" height="344"/>
+        <image name="launch-img" width="466" height="120"/>
     </resources>
 </document>
